--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,13 @@ body{
 		max-width: none;
 	}
 }
+/* SMALL MOBILE */
+@media(max-width:479.98px){
+
+
+
+
+}
 
 /* ----------------------------------------------- */
 
@@ -110,24 +117,25 @@ body{
 	align-items:center;
 }
 .header__logo {
+	position: relative;
+	z-index: 5;
 }
 .header__menu {
 	flex:1 1 auto;
 }
 
 .header__button {
+	position: relative;
+	z-index: 50;
 	flex: 0 0 252px;
 	display: flex;
 	justify-content: flex-end;
-}
-
-@media(max-width:991.98px){
-	.header__button{
-		flex: 0 0 150px;
-	}
+	align-items: center;
+	
 }
 
 
+/*-----------------------------------------------------------------*/
 
 
 
@@ -146,6 +154,7 @@ body{
 	letter-spacing: 1px;
 }
 
+
 /* .menu__item:not(:last-child){
 	margin-right: 40px;
 } */
@@ -158,6 +167,97 @@ body{
 	letter-spacing: 14%;
 	color:#000000;
 }
+
+.menu__link:hover{
+	text-decoration: underline;
+}
+
+
+
+@media(max-width:991.98px){
+	
+	.header__container{
+		min-height:80px;
+	}
+
+	.header__button{
+		flex: 0 0 170px;
+		
+	}
+
+	.menu__item{
+		margin:0px 30px 0px 0px;
+	}
+
+
+	
+}
+
+@media(max-width:767.98px){
+	.menu__body{
+		/* display:none; */
+		position: fixed;
+		top:0;
+		left:-100%;
+		width:100%;
+		height: 100%;
+		background-color: #eee;
+		padding:90px 15px 30px 15px;
+		transition: left 0.3s ease 0s;
+		overflow: auto; /*Скролл пунктов меню*/
+	}
+
+	.header:target .menu__body{
+		left:0;
+	}
+
+	.header:target .menu__body:before{
+		content: "";
+		position: fixed;
+		top:0;
+		left:0;
+		height: 80px;
+		width: 100%;
+		background-color: #fff;
+	}
+
+
+	.menu__list{
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
+
+	.menu__item{
+		margin:0px 0px 25px 0px;
+	}
+
+	.menu__item:last-child{
+		margin-bottom:0
+	}
+
+	.menu__link{
+		/* color:#fff; */
+		font-size: 20px;
+	}
+
+	
+
+	
+}
+
+@media(max-width:479.98px){
+
+	.header__logo{
+		flex: 0 0 40px;
+		overflow:hidden;
+	}
+}
+
+
+
+
+
 
 .button {
 	display: inline-block ;
@@ -184,3 +284,80 @@ body{
 	background-color: #4285F4;
 }
 
+
+/*----------------------------------------------*/
+.close-icon-menu,
+.icon-menu{
+	display: none; 
+}
+@media(max-width:767.98px){
+
+.icon-menu{
+	display: flex;
+	position: relative;
+	flex:0 0 30px;
+	height: 18px;
+	flex-direction: column;
+	justify-content: space-between;
+	margin:0px 0px 0px 20px;
+}
+
+
+
+
+.icon-menu::before,
+ .icon-menu::after{
+	content:"";
+	background-color: #000;
+	height: 2px;
+	transform-origin:0 0 ;
+
+}
+
+.icon-menu span{
+	height: 2px;
+	background-color: #000;
+
+}
+
+.close-icon-menu{
+	
+	flex:0 0 30px;
+	height: 30px;
+	position: relative;
+	margin:0px 0px 0px 20px;
+}
+
+
+.close-icon-menu::before,
+.close-icon-menu::after{
+	content:"";
+	position: absolute;
+	top:50%;
+	left:0;
+	height: 2px;
+	width: 100%;
+	background-color: #000;
+
+}
+
+.close-icon-menu::before{
+	
+	transform: rotate(45deg) ;
+}
+
+.close-icon-menu::after{
+	transform: rotate(-45deg);
+}
+
+
+.header:target .icon-menu{
+	display: none;
+}
+
+.header:target .close-icon-menu{
+	display: flex;
+}
+
+
+}
