--- a/css/style.css
+++ b/css/style.css
@@ -361,3 +361,474 @@ body{
 
 
 }
+
+/* =========================================================================================================== */
+/* block-text */
+
+.block-text {
+}
+.block-text__title {
+	font-size: 44px;
+	font-weight: 700;
+	line-height:126%;
+	color:#000000;
+	margin:0px 0px 12px 0px;
+}
+
+.block-text__title:not(:last-child){
+	margin:0px 0px 12px 0px;
+}
+
+.block-text__title span{
+	color:#EC5863;
+}
+.block-text__title_blue>span{
+	color:#4285F4;
+	
+}
+.block-text__text {
+	font-size: 12px;
+	line-height: 138%;
+	color:#616161;
+	
+}
+
+.block-text__text:not(:last-child){
+	margin:0px 0px 24px 0px;
+}
+.block-text__button {
+}
+.button {
+}
+
+
+@media (max-width:767.98px){
+	.block-text__title{
+		font-size: 34px;
+	}
+}
+
+/* =========================================================================================================== */
+/* get-started */
+
+
+.get-started {
+	background-color: #FAFBFD;
+	
+	}
+.get-started__container {
+	padding:150px 15px 50px 15px;
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	position: relative;
+
+}
+
+.get-started__container:before{
+	content:"";
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	right: 267px;
+	top:0;
+	transform: translate(100%,0px);
+	background-color: #EC5863;
+	border-radius: 30px 0px 0px 30px;
+}
+
+
+
+
+.get-started__content {
+	flex:0 1 48%;
+	padding:0px 20px 0px 20px;
+}
+.get-started__block-text {
+	max-width: 410px;
+}
+
+.get-started__video {
+	flex:1 1 100%;
+	padding:60px 0px 0px 20px;
+	
+}
+.video-get-started {
+	display: inline-flex;
+	align-items: center;
+	
+}
+.video-get-started__icon {
+	box-shadow: 0 4px 4px rgba(#000000, #000000, #000000, 0.25);
+	flex:0 0 44px;
+}
+.video-get-started__body {
+	padding:0px 0px 0px 12px;
+	
+}
+.video-get-started__title {
+	color:#B0B0B0;
+	font-size: 13px;
+	line-height: 126%;
+	letter-spacing: 1.5px;
+
+}
+.video-get-started__title:not(:last-child){
+	margin:0px 0px 5px 0px;
+}
+.video-get-started__text {
+	font-size: 9px;
+	line-height: 126%;
+	letter-spacing: 2px;
+	color:#000000;
+	text-transform: uppercase;
+	
+}
+.get-started__image {
+	flex:0 1 52%;
+	position: relative;
+	z-index: 2;
+}
+
+.get-started__image img{
+	max-width: 100%;
+}
+
+
+
+
+@media (max-width:991.98px){
+	.get-started__container:before{
+		right: 185px;
+		border-radius: 20px 0px 0px 20px;
+	}
+}
+
+@media (max-width:767.98px){
+	.get-started__container{
+		padding:100px 15px 30px 15px;	
+	}
+	
+	.get-started__container:before{
+		display: none ;
+	}
+
+	.get-started__block-text {
+		max-width: none;
+		/* flex:1 1 100%; */
+	}
+
+	.get-started__content{
+		flex:1 1 100%;
+		padding: 0;
+	}
+
+	.get-started__image{
+		flex:1 1 100%;
+		text-align: center;
+		padding:30px 0;
+	}
+	.get-started__video{
+		padding:0;
+	}
+
+}
+
+
+
+/* stay-safe-me */
+
+.stay-safe-me {
+	
+}
+.stay-safe-me__container {
+	padding:79px 15px;
+	display: flex;
+	flex-wrap: wrap;
+}
+.stay-safe-me__image {
+	
+	flex:1 1 50%;
+	padding:56px 0px 0px 112px;
+	z-index:20;
+	border-radius: 16px;
+	
+}
+.wrapper__image{
+	position: relative;
+	max-width: 229px;
+}
+.stay-safe-me__image img{
+	position: relative;
+	z-index: 20;
+	max-width: 100%;
+	border-radius: 16px;
+	box-shadow: 2px 4px 32px rgba(0, 0, 0, 12%);
+}
+.wrapper__image:after{
+	position: absolute;
+	content: "";
+	width:90%;
+	height: 100%;
+	top:13.5px;
+	left:0;
+	background-color: rgba(240, 240, 240, 49%);
+	z-index:10;
+	transform: translateX(11.5px);
+	border-radius: 16px;
+
+}
+.stay-safe-me__content {
+	flex:1 1 50%;
+	padding:152px 0px 0px 35px;
+}
+.stay-safe-me__block-text {
+	max-width: 363px;
+}
+
+
+
+
+.stay-safe-me__bg {
+	position: absolute;
+
+}
+.bg {
+}
+.bg__pink {
+	position: relative;
+	
+	
+}
+
+.bg__pink:after{
+	content:"";
+	position: absolute;
+	top:0;
+	left:0px;
+	width: 147px;
+	height: 147px;
+	background-color: #EC5863;
+	border-radius:30px;
+	z-index: 10;
+	transform: translate(40px, 0px);
+}
+
+
+.bg__pink_small {
+	position: relative;
+	width: 77px;
+	height: 77px;
+}
+
+.bg__pink_small:after,
+.bg__pink_small::before{
+	content: "";
+	position: absolute;
+	top:0;
+	left:0;
+	width: 100%;
+	height: 100%;
+	background-color: #EC5863;
+	border-radius: 30px;
+}
+
+.bg__pink_small:after{
+	transform: translate(73px,465px);
+
+
+}
+
+
+.bg__pink_small::before{
+	transform: translate(302px,358px);
+
+}
+
+@media(max-width:991.98px){
+	.stay-safe-me__image{
+		padding:56px 0px 0px 55px;
+	}
+
+	.bg__pink:after{
+		transform: translate(0,0);
+	}
+	.bg__pink_small::before{
+		transform:translate(245px,358px);
+	}
+
+	.bg__pink_small:after{
+		transform: translate(15px, 465px);
+		margin-right: 230px;
+	}
+}
+@media(max-width:767.98px){
+	
+	.stay-safe-me__bg{
+		display: none;
+	}
+
+	.stay-safe-me__content{
+		order:1;
+		padding:0px 25px 0px 15px;
+	}
+	.stay-safe-me__image{
+		order:2;
+		padding:0px 0px 0px 35px;
+	}
+
+}
+
+
+@media(max-width:660.98px){
+
+	.stay-safe-me__container{
+		padding:35px 0px;
+
+	}
+	
+	.stay-safe-me__content{
+		flex:1 1 100%;
+		
+	}
+
+	.stay-safe-me__block-text{
+		max-width:100%;
+	}
+	.stay-safe-me__image{
+		flex:1 1 100%;
+		padding:36px 0px 0px 0px;
+	}
+	.wrapper__image{
+		margin:0px auto;
+	}
+}
+
+
+
+
+/* stay-safe---------------------------------------------- */
+.stay-safe{
+	padding:80px 0;
+}
+.stay-safe__container {
+	display:flex;
+	align-items: center;
+	
+
+}
+.stay-safe__media {
+	flex:0 1 50%;
+}
+
+
+
+
+
+
+
+.media-stay-safe {
+	width: 373px;
+	padding:56px 0px 27px 0px;
+	text-align: center;
+	position: relative;
+	
+}
+.media-stay-safe__image {
+	display: inline-block;
+	box-shadow: 2px 4px 32px rgba(0, 0, 0, 0.12);
+	border-radius: 16px;
+	position: relative;
+	width: 61.5%;
+}
+
+.media-stay-safe__image img{
+	position: relative;
+	z-index: 2;
+	max-width: 100%;
+	border-radius: 16px;
+}
+
+.media-stay-safe__image::after{
+	content: "";
+	position: absolute;
+	bottom:-12px;
+	left:12px;
+	background: rgba(240, 240, 240, 0.49);
+	border-radius: 16px;
+	width: 206px;
+	height: 27px;
+	z-index: 2;
+
+}
+
+.stay-safe__content {
+	flex:0 1 50%;
+}
+.media-stay-safe__item {
+	position: absolute;
+	background-color: #EC5863;
+	border-radius: 30px;
+	width: 77px;
+	height: 77px;
+}
+.media-stay-safe__item_1 {
+	top:0;
+	left:0;
+	width: 147px;
+	height: 147px;
+}
+.media-stay-safe__item_2 {
+	bottom:0;
+	left:33px;
+}
+
+.media-stay-safe__item_3 {
+	bottom:107px;
+	right: 34px;
+	
+}
+
+
+
+@media (max-width:991.98px){
+	.stay-safe{
+		padding:40px 0;
+	}
+}
+
+@media (min-width:991.98px){
+	
+	.stay-safe__media{
+		padding:0px 0px 0px 47px;
+	}
+}
+
+@media (max-width:767.98px){
+	.stay-safe{
+		padding:30px 0;
+	}
+	.stay-safe__container{
+		flex-direction: column-reverse;
+	}
+
+	.stay-safe__content{
+		margin:0px 0px 30px 0px;
+	}
+
+	
+
+}
+
+@media (max-width:479.98px){
+	
+	
+	.media-stay-safe{
+		width: 290px;
+	}
+
+
+}
+
+
+
